package Bridge;

public interface MessageSender {
    void send(String message);
}
